# skasz

./: .gitignore  README.md  environment.yml  pyproject.toml
skasz/: __init__.py  observations.py  sz.py  utils.py  visibilities.py
skasz/senscalc/: __init__.py_  mid_utilities.py  subarray.py  utilities.py
skasz/senscalc/common/: api.py  beam.py  confusion_noise_lookup.py  model.py  pss.py  service.py  spectropolarimetry.py  weighting_lookup.py
skasz/senscalc/low/: api.py  bright_source_lookup.py  calculator.py  model.py  sefd_lookup.py  service.py  validation.py
skasz/senscalc/mid/: api.py  calculator.py  sefd.py  service.py  validation.py
skasz/senscalc/static/: openapi-common.yaml  openapi-low.yaml  openapi-mid-advanced.yaml  openapi-mid.yaml
skasz/senscalc/static/lookups/: beam_weighting_low.ecsv  beam_weighting_mid.ecsv  confusion_noise.ecsv
skasz/senscalc/static/resources/: SKA_colours.txt  haslam408_ds_Remazeilles2014_nonIDL_nside256.fits
skasz/senscalc/static/subarrays/low/: LOW_AA05_all.json  LOW_AA1_all.json  LOW_AA2_all.json  LOW_AA2_core_only.json  LOW_AA4_all.json  LOW_AA4_core_only.json  LOW_AAstar_all.json  LOW_AAstar_core_only.json
skasz/senscalc/static/subarrays/mid/: MID_AA05_all.json  MID_AA1_all.json  MID_AA2_all.json  MID_AA4_MeerKAT_only.json  MID_AA4_SKA_only.json  MID_AA4_all.json  MID_AAstar_SKA_only.json  MID_AAstar_all.json  MID_inner_r125m_aa4.json  MID_inner_r125m_aastar.json  MID_inner_r20km_aa4.json  MID_inner_r20km_aastar.json  MID_inner_r2km_aa4.json  MID_inner_r2km_aastar.json  MID_inner_r500m_aa4.json  (+1 more)
